✨feat : 주택유형에 따라서도 필터링 되도록 구현